<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.youssef.goclimber.AjoutParcours">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblTitreAjout"
        android:id="@+id/lblTitreAjout"
        android:textSize="@dimen/size_app_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/appNameColor" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/imageView4"
        android:layout_below="@+id/lblTitreAjout"
        android:layout_centerHorizontal="true"
        android:src="@android:drawable/ic_menu_add"
        android:contentDescription="@string/imgAjParcours" />

    <EditText
        android:paddingTop="35dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtNomParcours"
        android:inputType="text"
        android:hint="@string/txtNomParcour"
        android:textIsSelectable="false"
        android:textSize="15dp"
        android:layout_below="@+id/textView6"
        android:layout_alignLeft="@+id/lblTitreAjout"
        android:layout_alignStart="@+id/lblTitreAjout"
        android:layout_alignRight="@+id/lblTitreAjout"
        android:layout_alignEnd="@+id/lblTitreAjout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblTypeParc"
        android:id="@+id/textView6"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/imageView4"
        android:layout_alignLeft="@+id/txtNomParcours"
        android:layout_alignStart="@+id/txtNomParcours" />

    <Spinner
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:id="@+id/spnType"
        android:spinnerMode="dropdown"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignRight="@+id/txtNomParcours"
        android:layout_alignEnd="@+id/txtNomParcours" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblDiff"
        android:id="@+id/lblDiff"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

    <Spinner
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:id="@+id/spnDiff"
        android:spinnerMode="dropdown"
        android:layout_alignBottom="@+id/lblDiff"
        android:layout_alignLeft="@+id/spnType"
        android:layout_alignStart="@+id/spnType" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblCouleurs"
        android:id="@+id/textView7"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/lblDiff"
        android:layout_alignLeft="@+id/lblDiff"
        android:layout_alignStart="@+id/lblDiff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/lblCalend"
        android:id="@+id/textView11"
        android:layout_marginTop="44dp"
        android:textSize="15dp"
        android:layout_below="@+id/textView7"
        android:layout_alignRight="@+id/textView6"
        android:layout_alignEnd="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/txtCalend"
        android:id="@+id/txtDate"
        android:layout_alignTop="@+id/textView11"
        android:layout_alignLeft="@+id/spnDiff"
        android:layout_alignStart="@+id/spnDiff" />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/btnDate"
        android:src="@android:drawable/ic_menu_my_calendar"
        android:layout_alignBottom="@+id/txtDate"
        android:layout_alignRight="@+id/spnDiff"
        android:layout_alignEnd="@+id/spnDiff"
        android:layout_marginBottom="13dp"
        android:contentDescription="@string/btnCalend" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblGym"
        android:id="@+id/textView13"
        android:layout_below="@+id/textView11"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAjouterParcours"
        android:id="@+id/btnAjouterParcours"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/txtDate"
        android:onClick="btnAjoutClick"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:id="@+id/spnCouleur"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignLeft="@+id/spnDiff"
        android:layout_alignStart="@+id/spnDiff"
        android:spinnerMode="dropdown" />

    <Spinner
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:id="@+id/spnGym"
        android:spinnerMode="dropdown"
        android:layout_alignBottom="@+id/textView13"
        android:layout_alignLeft="@+id/imageView4"
        android:layout_alignStart="@+id/imageView4" />

</RelativeLayout>
