<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblTitre"
        android:id="@+id/lblTitre"
        android:textColor="@color/appNameColor"
        android:textSize="@dimen/size_app_name"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblType"
        android:id="@+id/lblType"
        android:layout_marginTop="43dp"
        android:textSize="15dp"
        android:layout_marginLeft="30dp" />

    <Spinner
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/cbType"
        android:spinnerMode="dropdown"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:inputType="text"
        android:hint="@string/txtLieu"
        android:clickable="false"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:textSize="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblDate"
        android:id="@+id/lblDate"
        android:layout_marginLeft="30dp"
        android:textSize="15dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="left" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="186dp"
        android:id="@+id/datePicker"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:clickable="false"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:text="@string/btnEnvoyer"
        android:background="@color/appNameColor"
        android:onClick="btnEnvoyerClick" />

</LinearLayout>