<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <TextView
        android:textColor="@color/appNameColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PrenomUsager"
        android:id="@+id/txtPrenom"
        android:textSize="25dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView" />

    <TextView
        android:textColor="@color/appNameColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NomUsager"
        android:id="@+id/txtNomFamille"
        android:textSize="25dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/txtPrenom"
        android:layout_alignLeft="@+id/txtPrenom"
        android:layout_alignStart="@+id/txtPrenom" />

    <ImageView
        android:src="@drawable/ic_face_login"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="15dp"
        android:id="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_marginTop="8dp"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblClassement"
        android:id="@+id/lblClassement"
        android:layout_below="@+id/txtNomFamille"
        android:layout_alignLeft="@+id/txtNomFamille"
        android:layout_alignStart="@+id/txtNomFamille" />

    <TextView
        android:textColor="@color/appNameColor"
        android:textSize="20dp"
        android:layout_marginRight="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AffClassement"
        android:id="@+id/txtAffClassement"
        android:layout_alignBottom="@+id/lblClassement"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ListView
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lstHistorique"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:entries="@array/arrDernierParcours"
        android:textColor="@color/appNameColor"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblDernierParcours"
        android:id="@+id/txtDernierParcours"
        android:layout_below="@+id/imageView"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView" />

</RelativeLayout>
